--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,6 +6,7 @@ name: Docker
 # documentation.
 
 on:
+  workflow_dispatch:
   push:
     branches: [ "main" ]
     # Publish semver tags as releases.
@@ -94,3 +95,14 @@ jobs:
         # This step uses the identity token to provision an ephemeral certificate
         # against the sigstore community Fulcio instance.
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - run: |
+          docker run ghcr.io/jan-lagerpusch/lil-aga-03-05-publish-container-image:lil-aga-03-05-publish-container-image:main
+          grep "container"
+          
+    
+    
+    
