--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -100,8 +100,7 @@ jobs:
     needs: build
     steps:
       - run: |
-          docker run ghcr.io/jan-lagerpusch/lil-aga-03-05-publish-container-image:main
-          grep "container"
+          docker run ghcr.io/jan-lagerpusch/lil-aga-03-05-publish-container-image:main | grep "container"
           
     
     
