Add test step for Docker container output

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -99,7 +99,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - run: |
+      - name: "Test docker container output"
+        run: |
           docker run ghcr.io/jan-lagerpusch/lil-aga-03-05-publish-container-image:main | grep "container"
           
     
